--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pokemon Battle Chess | 策略对战游戏</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -58,6 +58,7 @@
     </script>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="landscape-styles.css">
 </head>
 
 <body class="bg-gray-900 text-white font-sans min-h-screen flex flex-col overflow-hidden">
@@ -96,8 +97,11 @@
 
             <!-- 游戏状态显示 - 只保留剩余移动次数 -->
             <div class="absolute top-4 left-4 bg-black/70 px-4 py-2 rounded-lg backdrop-blur-sm z-20">
+                <div id="current-player" class="text-sm">
+                    当前玩家: <span id="player-color" class="text-blue-400">蓝色方</span>
+                </div>
                 <div id="moves-remaining" class="text-sm mt-1">
-                    剩余移动次数: <span class="text-yellow-400">2</span>
+                    剩余行动点: <span class="text-yellow-400">2</span>
                 </div>
             </div>
         </div>
@@ -197,7 +201,7 @@
                     </div>
                 </div>
 
-                <div id="pokemon-pack" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                <div id="pokemon-pack" class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-5 gap-4">
                     <!-- 宝可梦卡片将通过JavaScript动态生成 -->
                 </div>
             </div>
@@ -224,22 +228,43 @@
             </div>
 
             <div class="p-6 overflow-y-auto flex-grow">
-                <h3 class="text-xl font-semibold mb-3 text-primary">基本玩法</h3>
+                <h3 class="text-xl font-semibold mb-3 text-red-500">基本玩法</h3>
                 <p class="text-gray-300 mb-4">以下棋为特色，依靠属性克制等机制，操纵宝可梦棋子，击败对手</p>
 
-                <h3 class="text-xl font-semibold mb-3 text-primary">属性效果</h3>
+                <h3 class="text-xl font-semibold mb-3 text-red-500">属性效果</h3>
                 <ul class="list-disc pl-5 text-gray-300 mb-4 space-y-2">
                     <li><span class="text-flying">飞行系</span>：飞跃面前的第一个棋子</li>
                     <li><span class="text-electric">电系</span>：斜向走格</li>
                     <li><span class="text-water">水系</span>：在河流行上横向移动</li>
                     <li><span class="text-purple-400">超能系</span>：与友方棋子交换位置</li>
                 </ul>
-                <h3 class="text-xl font-semibold mb-3 text-primary">关于攻击</h3>
+                <h3 class="text-xl font-semibold mb-3 text-red-500">关于攻击</h3>
                 </ul>
                 <li>点击精灵后，精灵进入待命状态，显示移动范围，点击范围内的敌人即可发动攻击</li>
                 </ul>
 
-                <h3 class="text-xl font-semibold mb-3 text-primary">伤害计算</h3>
+                <h3 class="text-xl font-semibold mb-3 text-yellow-500">关于移动</h3>
+                <p class="text-gray-300 mb-2">（速度种族：移动距离）</p>
+                <div class="grid grid-cols-2 gap-2 mb-4">
+                    <div class="bg-gray-700 p-2 rounded">0到20：0.5</div>
+                    <div class="bg-gray-700 p-2 rounded">20到40：1</div>
+                    <div class="bg-gray-700 p-2 rounded">40到60：1.5</div>
+                    <div class="bg-gray-700 p-2 rounded">60到80：2</div>
+                    <div class="bg-gray-700 p-2 rounded">80到100：2.5</div>
+                    <div class="bg-gray-700 p-2 rounded">100到120：3</div>
+                    <div class="bg-gray-700 p-2 rounded">120到140：3.5</div>
+                    <div class="bg-gray-700 p-2 rounded">140到160：4</div>
+                    <div class="bg-gray-700 p-2 rounded">160到180：4.5</div>
+                    <div class="bg-gray-700 p-2 rounded">180到200：5</div>
+                </div>
+                <div class="bg-yellow-900/30 border border-yellow-700 p-4 rounded-lg mb-4">
+                    <p class="text-yellow-300 font-semibold">特别声明：</p>
+                    <p class="text-yellow-200">➀该图仅供参考，不等于实际精灵距离</p>
+                    <p class="text-yellow-200">➁戏法空间下，速度线反转，快慢从两侧互相对应：比如，0.5速度修改为5速，煤炭龟空间下实际速度和速迪一个级别</p>
+                    <p class="text-yellow-200">➂对于速度非整数的棋子，每回合内第一次行动为x+0.5，第二次行动为x-0.5</p>
+                </div>
+
+                <h3 class="text-xl font-semibold mb-3 text-red-500">属性克制</h3>
                 <p class="text-gray-300 mb-2">棋子依靠自身的攻击对敌方棋子造成伤害，属性克制关系影响最终伤害：</p>
                 <ul class="list-disc pl-5 text-gray-300 mb-4 space-y-1">
                     <li><span style="color: #4CAF50;">单克制：效果拔群！伤害+1！比如火vs草</span></li>
@@ -253,7 +278,7 @@
                     <li<span style="color: #00a4f6;">水恶vs水超，则棋子优先使用克制敌方的恶系攻击；地飞vs钢飞，则棋子优先使用不被免疫的飞行系攻击</li>
                 </ul>
 
-                <h3 class="text-xl font-semibold mb-3 text-primary">回合规则</h3>
+                <h3 class="text-xl font-semibold mb-3 text-red-500">回合规则</h3>
                 <p class="text-gray-300">每回合拥有两次移动机会，可以分别移动两个棋子，也可以移动一个棋子两次</p>
             </div>
         </div>
@@ -297,18 +322,30 @@
                 <div class="mb-6">
                     <h3 class="text-lg font-semibold mb-3">创建或加入房间</h3>
                     <div class="flex flex-col space-y-4">
+                        <!-- 添加用户名输入框 -->
+                        <div>
+                            <input id="username-input" placeholder="请输入您的名字" value="玩家1" 
+                                class="w-full px-3 py-2 rounded-lg bg-gray-700 border-0 focus:outline-none">
+                        </div>
                         <div class="flex space-x-2">
                             <button id="create-room-btn"
                                 class="bg-purple-600 hover:bg-purple-700 text-white py-2 px-4 rounded-lg flex-1 transition-all">
                                 <i class="fa fa-plus-circle mr-2"></i> 创建房间
                             </button>
-                            <div class="flex flex-1">
+                            <!-- 修改为：输入框单独一行，按钮在下方 -->
+                            <div class="flex flex-col flex-1 space-y-2">
                                 <input id="join-room-input" placeholder="输入房间号"
-                                    class="flex-1 px-3 py-2 rounded-l-lg bg-gray-700 border-0 focus:outline-none">
-                                <button id="join-room-btn"
-                                    class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded-r-lg transition-all">
-                                    加入
-                                </button>
+                                    class="w-full px-3 py-2 rounded-lg bg-gray-700 border-0 focus:outline-none">
+                                <div class="flex space-x-2">
+                                    <button id="join-room-btn"
+                                        class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded-lg flex-1 transition-all">
+                                        加入房间
+                                    </button>
+                                    <button id="spectate-room-btn"
+                                        class="bg-yellow-600 hover:bg-yellow-700 text-white py-2 px-4 rounded-lg flex-1 transition-all">
+                                        观战视角
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -359,7 +396,6 @@
         </div>
     </div>
     <script src="orientation.js"></script>
-    <script src="game-messages.js"></script>
     <script src="game.js"></script>
     <script src="pokemon-cost.js"></script>
     <script src="AIChessSet.js"></script>
